# cc-python

./: README.md  cSpell.json  cookiecutter.json  local_extensions.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  README.md  RELEASING.md  ROADMAP.md  TESTING.md  USAGE.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.pack_name}}/: _version.py  cli.py  token.py
